@@ -49,6 +49,8 @@ Fixes:
  * Nested @asserts/@breaks with no '=' would loop unintentionally.
    Reported by Minion. [MG]
  * Fixed a couple of small bugs in give/@cost. [MG]
+ * You can now always look at remote objects whose descs are not set nearby,
+   and can never look at remote objects with nearby descs. [MG]
 
 
 & 1.8.4p0
